# cprog-labs

Hw_02/: homework.cpp
Hw_03/: README.md
Hw_03_new/: README.md  hw3_last_version.cpp
lab_02/: 1.cpp  2.cpp  3.cpp  4.cpp
lab_03/: 2.cpp  3.cpp  привет1.txt
lab_04/: 1.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  CMakeLists.txt
lab_05/: implementation.cpp
lab_06/: 2.cpp  4.cpp  5.cpp  6.cpp  8.cpp
lab_07/: 1.cpp  header.hpp
lab_09/: CMakeLists.txt  header.hpp
sem1/: README.md
sem1/Hw_03_new/: README.md
sem1/lab_02/: 2.cpp  4.cpp
sem1/lab_03/: 4.cpp  5.cpp  6.cpp  7-10.cpp
sem1/lab_04/: 2.cpp  3.cpp  lab04.h
sem1/lab_05/: CMakeLists.txt
sem1/lab_05/include/: header.hpp
sem1/lab_06/: 1.cpp  3.cpp  7.cpp  9.cpp  CMakeLists.txt  lab.hpp  lab06.cpp
sem1/lab_07/: 2.cpp  3.cpp  CMakeLists.txt
sem1/lab_08/: 1.cpp
sem1/lab_09/: 1.cpp  2.cpp
sem2/hw-1/: BSTree.hpp  main.cpp  tree.txt
sem2/lab-07/: 5.cpp
sem2/lab_01/: 1.cpp
sem2/lab_03/: 1.cpp
sem2/lab_04/: 25.cpp
sem2/lab_05/: 7.cpp
sem2/lab_06/: 25.cpp  input.txt  output.txt
sem2/lab_07/: 1.cpp
